--- a/myapp/templates/myapp/post_list.html
+++ b/myapp/templates/myapp/post_list.html
@@ -1,22 +1,23 @@
-<html>
-    <head>
-        <title>Cecilia's blog</title>
-    </head>
-    <h1> Lista dei post </h1> 
+    {% extends 'myapp/base.html' %}
+    {% block content %}
     <body>
-        <p>Hi there!</p>
-        <p>It works!</p>
-       
     <h1><a href="/">Django Girls Blog</a></h1>
 </div>
 
-{% for post in posts %}
-    <div>
-        <p>published: {{ post.published_date }}</p>
-        <h1><a href="">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaks }}</p>
+<div class="content container">
+    <div class="row">
+        <div class="col-md-8">
+            {% for post in posts %}
+                <div class="post">
+                    <div class="date">
+                        {{ post.published_date }}
+                    </div>
+                   <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+                    <p>{{ post.text|linebreaks }}</p>
+                </div>
+            {% endfor %}
+        </div>
     </div>
-{% endfor %}
-        <p><a href="http://djangogirls.org">django girls</a></p>
+</div>
     </body>
-</html>
+    {% endblock content %}
